src/objects/ffvat__VatReportedTransaction__c.object
<CustomObject>
    <fields>
        <fullName>ffvat__AccountCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipName>VATReportedTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffvat__AccountValue__c</fullName>
        <label>Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffvat__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>VATReportedTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffvat__DocumentDate__c</fullName>
        <formula>ffvat__TransactionLineItem__r.c2g__Transaction__r.c2g__TransactionDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffvat__DocumentNumber__c</fullName>
        <formula>ffvat__TransactionLineItem__r.c2g__Transaction__r.c2g__DocumentNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffvat__DocumentType__c</fullName>
        <formula>Text(ffvat__TransactionLineItem__r.c2g__Transaction__r.c2g__TransactionType__c)</formula>
        <label>Document Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffvat__ECCountryCode__c</fullName>
        <formula>Text(ffvat__Account__r.c2g__CODAECCountryCode__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EC Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffvat__FullyVATReported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fully VAT Reported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffvat__NetBox__c</fullName>
        <label>Net Box</label>
        <picklist>
            <picklistValues>
                <fullName>Box 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box 7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ffvat__NetReported__c</fullName>
        <label>Net Reported</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffvat__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>VAT Reported Transactions</relationshipLabel>
        <relationshipName>Company</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffvat__PaidAccountValue__c</fullName>
        <label>Paid Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffvat__Reconciled__c</fullName>
        <formula>Text(ffvat__VatReturn__r.ffvat__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reconciled</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffvat__TaxBox__c</fullName>
        <label>Tax Box</label>
        <picklist>
            <picklistValues>
                <fullName>Box 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ffvat__TaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipName>VAT_Reported_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffvat__TaxReported__c</fullName>
        <label>Tax Reported</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffvat__TransactionLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Line Item</label>
        <referenceTo>c2g__codaTransactionLineItem__c</referenceTo>
        <relationshipName>VATReportedTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffvat__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Number</label>
        <referenceTo>c2g__codaTransaction__c</referenceTo>
        <relationshipLabel>VAT Reported Transactions</relationshipLabel>
        <relationshipName>VAT_Reported_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffvat__VATRegistrationNumber__c</fullName>
        <formula>ffvat__Account__r.c2g__CODAVATRegistrationNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT Registration Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffvat__VATReturnType__c</fullName>
        <formula>TEXT(ffvat__VatReturn__r.ffvat__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT Return Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffvat__VATStatus__c</fullName>
        <formula>TEXT( ffvat__Account__r.c2g__CODAVATStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffvat__VatReturn__c</fullName>
        <label>VAT Return Report</label>
        <referenceTo>ffvat__VatReturn__c</referenceTo>
        <relationshipLabel>VAT Reported Transactions</relationshipLabel>
        <relationshipName>VATReportedTransactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffvat__VendorDocumentNumber__c</fullName>
        <formula>ffvat__TransactionLineItem__r.c2g__Transaction__r.c2g__VendorDocumentNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Document Number</label>
        <type>Text</type>
    </fields>
    <label>VAT Reported Transaction</label>
    <listViews>
        <fullName>ffvat__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Line Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VAT Reported Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>